--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,8 +1,6 @@
 @import "tailwindcss";
 @source "../views";
 
-@tailwind base;
-@tailwind components;
 @tailwind utilities;
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
@@ -14,3 +12,27 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+@layer utilities {
+    @keyframes enter {
+      from {
+        opacity: 0;
+        transform: scale(0.95);
+      }
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+  
+    .animate-enter {
+      animation: enter 0.3s ease-out forwards;
+    }
+  }
+
+  .transform {
+    transition: transform 0.2s ease;
+    will-change: transform;
+  }
+
+  
